<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ViewStub
                android:id="@+id/view_stub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout="@layout/activity_main_two"
                android:visibility="visible" />


            <Button
                android:id="@+id/button_mvp"
                style="@style/button_style"
                android:text="@string/text_mvp" />

            <Button
                android:id="@+id/button_internet"
                style="@style/button_style"
                android:text="@string/text_refresh" />

            <Button
                android:id="@+id/start_new_activity"
                style="@style/button_style"
                android:text="@string/text_new_web_view" />

            <TextView
                android:id="@+id/text_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_state_mode"
                style="@style/button_style"
                android:text="@string/text_state" />

            <Button
                android:id="@+id/button_rxjava_mode"
                style="@style/button_style"
                android:text="@string/text_rx_java" />

            <Button
                android:id="@+id/button_duty"
                style="@style/button_style"
                android:text="@string/text_duty" />

            <Button
                android:id="@+id/button_strategy"
                style="@style/button_style"
                android:text="@string/text_strategy_mode" />

            <Button
                android:id="@+id/button_define_item"
                style="@style/button_style"
                android:text="@string/text_define_item" />

            <Button
                android:id="@+id/button_circle"
                style="@style/button_style"
                android:text="@string/text_watch" />

            <Button
                android:id="@+id/button_animation"
                style="@style/button_style"
                android:text="@string/text_animation" />

            <Button
                android:id="@+id/button_draw_function"
                style="@style/button_style"
                android:text="@string/text_draw_function" />

            <Button
                android:id="@+id/button_notification"
                style="@style/button_style"
                android:text="@string/text_notification" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
